--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,18 +13,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="250dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Email" />
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="320dp"
         android:ems="10"
-        android:layout_centerHorizontal="true"
-        android:inputType="textPersonName"
-        android:text="Password" />
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/textView6"
