--- a/app/src/main/res/layout/activity_about_dairy_cattle.xml
+++ b/app/src/main/res/layout/activity_about_dairy_cattle.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutUs">
+    tools:context=".AboutDairyCattle">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="AboutUs"
+        android:text="AboutDairyCattle"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
@@ -29,7 +30,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editTextFarmName"
+                android:id="@+id/editTextDateOfBirth"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="85dp"
@@ -40,17 +41,17 @@
                 android:layout_marginBottom="80dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Farm Name"
+                android:text="Date Of Birth"
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#ffffff"
                 android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
+                app:layout_constraintBottom_toTopOf="@+id/editTextBreed"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextRegNo"
+                android:id="@+id/editTextBreed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="85dp"
@@ -61,17 +62,17 @@
                 android:layout_marginBottom="80dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Registration No"
+                android:text="Breed"
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#ffffff"
                 android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
+                app:layout_constraintBottom_toTopOf="@+id/editTextCoatColour"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextOwnerName"
+                android:id="@+id/editTextCoatColour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="85dp"
@@ -82,18 +83,18 @@
                 android:layout_marginBottom="80dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="OwnerName"
+                android:text="Features/Coat Colour"
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#ffffff"
                 android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
+                app:layout_constraintBottom_toTopOf="@+id/editTextNoofLactation"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
             <EditText
-                android:id="@+id/editTextVdivision"
+                android:id="@+id/editTextNoofLactation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="85dp"
@@ -108,13 +109,13 @@
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#ffffff"
                 android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
+                app:layout_constraintBottom_toTopOf="@+id/editTextMotherTagId"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextAddress"
+                android:id="@+id/editTextMotherTagId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="85dp"
@@ -129,13 +130,13 @@
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#ffffff"
                 android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
+                app:layout_constraintBottom_toTopOf="@+id/editTextRemark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextContactNo"
+                android:id="@+id/editTextRemark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="85dp"
@@ -150,56 +151,15 @@
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#ffffff"
                 android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
+                app:layout_constraintBottom_toTopOf="@+id/buttonSave"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/editTextNoOfCattle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="85dp"
-                android:layout_marginLeft="85dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="113dp"
-                android:layout_marginRight="113dp"
-                android:layout_marginBottom="80dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Total Number of Cattle"
-                android:background="@drawable/edit_round"
-                android:backgroundTint="#ffffff"
-                android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/editTextNoOfDairy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="85dp"
-                android:layout_marginLeft="85dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="113dp"
-                android:layout_marginRight="113dp"
-                android:layout_marginBottom="80dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Total number of dairy cattle"
-                android:background="@drawable/edit_round"
-                android:backgroundTint="#ffffff"
-                android:drawablePadding="15dp"
-                app:layout_constraintBottom_toTopOf="@+id/spinnerGenres"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
 
             <Button
-                android:id="@+id/buttonAdd"
+                android:id="@+id/buttonSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/spinnerGenres"
