--- a/app/src/main/res/layout/activity_retrive.xml
+++ b/app/src/main/res/layout/activity_retrive.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".Retrive">
 
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="409dp"
+        android:layout_height="505dp"
+        android:layout_marginBottom="2dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
