--- a/app/src/main/res/layout/activity_view_farms.xml
+++ b/app/src/main/res/layout/activity_view_farms.xml
@@ -4,12 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewPage">
+    tools:context=".ViewFarms">
+
+    <TextView
+        android:id="@+id/textViewFarmn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginLeft="156dp"
+        android:layout_marginTop="78dp"
+        android:text="Farm list" />
 
     <ListView
         android:id="@+id/listViewFarms"
         android:layout_width="409dp"
-        android:layout_height="495dp"
+        android:layout_height="632dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
         android:layout_marginTop="150dp"
