--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -5,16 +5,16 @@
 
 
     <TextView
-        android:text="Roch"
+        android:text="TextView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:id="@+id/textViewName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:text="Rock"
+        android:text="TextView"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:id="@+id/textViewGenre"
+        android:id="@+id/textViewRegNo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
