--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,13 +19,8 @@
         android:id="@+id/addFarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="155dp"
-        android:layout_marginLeft="155dp"
-        android:layout_marginTop="172dp"
-        android:layout_marginEnd="168dp"
-        android:layout_marginRight="168dp"
-        android:layout_marginBottom="122dp"
-        android:onClick="toAddFarm"
+       android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
         android:text="Add Farm" />
 
     <ListView
@@ -34,9 +29,9 @@
         android:layout_height="500dp"
         android:layout_marginStart="3dp"
         android:layout_marginLeft="3dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="220dp"
         android:layout_marginEnd="3dp"
         android:layout_marginRight="3dp"
-        android:layout_marginBottom="37dp" />
+        />
 
 </RelativeLayout>
