Farm update completed !!

--- a/app/src/main/res/layout/update_farms.xml
+++ b/app/src/main/res/layout/update_farms.xml
@@ -112,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextCattleCount" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
