--- a/app/src/main/res/layout/activity_add_cattle.xml
+++ b/app/src/main/res/layout/activity_add_cattle.xml
@@ -17,6 +17,14 @@
         android:hint="Cattle Breed" />
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="20dp"
+        android:text="Hello"
+        android:id="@+id/textViewTest"
+        />
 
     <EditText
         android:id="@+id/editTextCattleTagId"
