--- a/app/src/main/res/layout/activity_add_farm.xml
+++ b/app/src/main/res/layout/activity_add_farm.xml
@@ -49,11 +49,21 @@
         android:hint="Veterinary Division" />
 
     <EditText
-        android:id="@+id/editTextFarmAddress"
+        android:id="@+id/editTextFarmGSDiv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="300dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="GS Division" />
+
+    <EditText
+        android:id="@+id/editTextFarmAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="350dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Address" />
@@ -63,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="400dp"
         android:ems="10"
         android:inputType="number"
         android:hint="Contact No" />
@@ -73,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="450dp"
         android:ems="10"
         android:inputType="number"
         android:hint="Cattle Count" />
@@ -83,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="500dp"
         android:ems="10"
         android:inputType="number"
         android:hint="Dairy Cattle Count" />
@@ -92,7 +102,7 @@
         android:id="@+id/btnAddCattle"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="520dp"
+        android:layout_marginTop="570dp"
         android:layout_centerHorizontal="true"
         android:text="Add Farm"
         android:background="#24a0ed"
