--- a/app/src/main/res/layout/update_farms.xml
+++ b/app/src/main/res/layout/update_farms.xml
@@ -9,8 +9,8 @@
 
     <EditText
         android:id="@+id/editTextName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="187dp"
+        android:layout_height="26dp"
         android:layout_marginStart="91dp"
         android:layout_marginTop="57dp"
         android:layout_marginEnd="107dp"
@@ -22,8 +22,8 @@
 
     <EditText
         android:id="@+id/editTextRegNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="186dp"
+        android:layout_height="23dp"
         android:layout_marginStart="93dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="105dp"
@@ -35,8 +35,8 @@
 
     <EditText
         android:id="@+id/editTextOwnName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="193dp"
+        android:layout_height="28dp"
         android:layout_marginStart="93dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="105dp"
@@ -48,8 +48,8 @@
 
     <EditText
         android:id="@+id/editTextVetDiv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="197dp"
+        android:layout_height="31dp"
         android:layout_marginStart="98dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="100dp"
@@ -58,6 +58,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextOwnName" />
+
+    <EditText
+        android:id="@+id/editTextGSDiv"
+        android:layout_width="196dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="98dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="100dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextVetDiv" />
 
     <EditText
         android:id="@+id/editTextAddress"
@@ -70,7 +83,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextVetDiv" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextGSDiv" />
 
     <EditText
         android:id="@+id/editTextContactNo"
