Vaccination is working finally !!

--- a/app/src/main/res/layout/activity_cattle_home.xml
+++ b/app/src/main/res/layout/activity_cattle_home.xml
@@ -7,7 +7,7 @@
     tools:context=".CattleHome">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonVaccine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
@@ -29,7 +29,7 @@
         android:text="Breeding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/buttonVaccine"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -43,7 +43,7 @@
         android:text="Disease"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonVaccine" />
 
     <Button
         android:id="@+id/button5"
