--- a/app/src/main/res/layout/activity_view_breeding.xml
+++ b/app/src/main/res/layout/activity_view_breeding.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewVaccination">
+    tools:context=".ViewBreeding">
 
     <Button
         android:id="@+id/buttonAddBreeding"
@@ -15,13 +15,13 @@
         android:layout_marginTop="66dp"
         android:layout_marginEnd="183dp"
         android:layout_marginRight="183dp"
-        android:text="Add Vacc"
+        android:text="Add Breeding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/listViewDisease"
+        android:id="@+id/listViewBreeding"
         android:layout_width="408dp"
         android:layout_height="527dp"
         android:layout_marginStart="1dp"
