--- a/app/src/main/res/layout/activity_view_disease.xml
+++ b/app/src/main/res/layout/activity_view_disease.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewVaccination">
+    tools:context=".ViewDisease">
 
     <Button
         android:id="@+id/buttonAddBreeding"
@@ -15,7 +15,7 @@
         android:layout_marginTop="66dp"
         android:layout_marginEnd="183dp"
         android:layout_marginRight="183dp"
-        android:text="Add Vacc"
+        android:text="Add D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
