--- a/app/src/main/res/layout/activity_cattle_home.xml
+++ b/app/src/main/res/layout/activity_cattle_home.xml
@@ -47,7 +47,7 @@
         app:layout_constraintVertical_bias="0.076" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/buttonCattleInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
